SmartHomeDesktop/include/vpx/vpx_codec.h

    
    typedef enum {
        VPX_CODEC_OK,
        VPX_CODEC_ERROR,
        VPX_CODEC_MEM_ERROR,
        VPX_CODEC_ABI_MISMATCH,
        VPX_CODEC_INCAPABLE,
        VPX_CODEC_UNSUP_BITSTREAM,
        VPX_CODEC_UNSUP_FEATURE,
        VPX_CODEC_CORRUPT_FRAME,
        VPX_CODEC_INVALID_PARAM,
        VPX_CODEC_LIST_END
    }
    vpx_codec_err_t;
    typedef long vpx_codec_caps_t;
    typedef long vpx_codec_flags_t;
#define VPX_CODEC_USE_XMA 0x00000001    
    typedef const struct vpx_codec_iface vpx_codec_iface_t;
    typedef       struct vpx_codec_priv  vpx_codec_priv_t;
    typedef const void *vpx_codec_iter_t;
    typedef struct vpx_codec_ctx
    {
        const char              *name;        
        vpx_codec_iface_t       *iface;       
        vpx_codec_err_t          err;         
        const char              *err_detail;  
        vpx_codec_flags_t        init_flags;  
        union
        {
            struct vpx_codec_dec_cfg  *dec;   
            struct vpx_codec_enc_cfg  *enc;   
            void                      *raw;
        }                        config;      
        vpx_codec_priv_t        *priv;        
    } vpx_codec_ctx_t;
    const char *vpx_codec_err_to_string(vpx_codec_err_t  err);
    const char *vpx_codec_error(vpx_codec_ctx_t  *ctx);
    const char *vpx_codec_error_detail(vpx_codec_ctx_t  *ctx);
    vpx_codec_err_t vpx_codec_destroy(vpx_codec_ctx_t *ctx);
    vpx_codec_caps_t vpx_codec_get_caps(vpx_codec_iface_t *iface);
    vpx_codec_err_t vpx_codec_control_(vpx_codec_ctx_t  *ctx,
                                       int               ctrl_id,
                                       ...);
#    define vpx_codec_control(ctx,id,data) vpx_codec_control_(ctx,id,data)
#    define vpx_codec_control(ctx,id,data) vpx_codec_control_##id(ctx,id,data)\
    typedef struct vpx_codec_mmap
    {
        unsigned int   id;     
        unsigned long  sz;     
        unsigned int   align;  
        unsigned int   flags;  
#define VPX_CODEC_MEM_ZERO     0x1  
#define VPX_CODEC_MEM_WRONLY   0x2  
#define VPX_CODEC_MEM_FAST     0x4  
        void          *base;   
        void (*dtor)(struct vpx_codec_mmap *map);         
        void          *priv;   
    } vpx_codec_mmap_t; 
    vpx_codec_err_t vpx_codec_get_mem_map(vpx_codec_ctx_t                *ctx,
                                          vpx_codec_mmap_t               *mmap,
                                          vpx_codec_iter_t               *iter);
    vpx_codec_err_t  vpx_codec_set_mem_map(vpx_codec_ctx_t   *ctx,
                                           vpx_codec_mmap_t  *mmaps,
                                           unsigned int       num_maps);