SmartHomeDesktop/src/vpx/VpxLibrary.java

	@Ptr 
	synchronized protected native static long vpx_codec_err_to_string(int err);
	/**
	 * \brief Retrieve error synopsis for codec context<br>
	 * * Returns a human readable string for the last error returned by the<br>
	 * algorithm. The returned error will be one line and will not contain<br>
	 * any newline characters.<br>
	 * *<br>
	 * \param[in]    ctx     Pointer to this instance's context.<br>
	 * Original signature : <code>char* vpx_codec_error(vpx_codec_ctx_t*)</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:301</i>
	 */
	synchronized public static Pointer<Byte > vpx_codec_error(Pointer<vpx_codec_ctx_t > ctx) {
		return Pointer.pointerToAddress(vpx_codec_error(Pointer.getPeer(ctx)), Byte.class);
	}
	@Ptr 
	synchronized protected native static long vpx_codec_error(@Ptr long ctx);
	/**
	 * \brief Retrieve detailed error information for codec context<br>
	 * * Returns a human readable string providing detailed information about<br>
	 * the last error.<br>
	 * * \param[in]    ctx     Pointer to this instance's context.<br>
	 * * \retval NULL<br>
	 *     No detailed information is available.<br>
	 * Original signature : <code>char* vpx_codec_error_detail(vpx_codec_ctx_t*)</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:314</i>
	 */
	synchronized public static Pointer<Byte > vpx_codec_error_detail(Pointer<vpx_codec_ctx_t > ctx) {
		return Pointer.pointerToAddress(vpx_codec_error_detail(Pointer.getPeer(ctx)), Byte.class);
	}
	@Ptr 
	synchronized protected native static long vpx_codec_error_detail(@Ptr long ctx);
	/**
	 * \brief Destroy a codec instance<br>
	 * * Destroys a codec context, freeing any associated memory buffers.<br>
	 * * \param[in] ctx   Pointer to this instance's context<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     The codec algorithm initialized.<br>
	 * \retval #VPX_CODEC_MEM_ERROR<br>
	 *     Memory allocation failed.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_destroy(vpx_codec_ctx_t*)</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:334</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_destroy(Pointer<vpx_codec_ctx_t > ctx) {
		return FlagSet.fromValue(vpx_codec_destroy(Pointer.getPeer(ctx)), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_destroy(@Ptr long ctx);
	/**
	 * \brief Get the capabilities of an algorithm.<br>
	 * * Retrieves the capabilities bitfield from the algorithm's interface.<br>
	 * * \param[in] iface   Pointer to the algorithm interface<br>
	 * Original signature : <code>vpx_codec_caps_t vpx_codec_get_caps(vpx_codec_iface_t*)</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:344</i>
	 */
	@CLong 
	synchronized public static long vpx_codec_get_caps(Pointer<VpxLibrary.vpx_codec_iface > iface) {
		return vpx_codec_get_caps(Pointer.getPeer(iface));
	}
	@CLong 
	synchronized protected native static long vpx_codec_get_caps(@Ptr long iface);
	/**
	 * \brief Control algorithm<br>
	 * * This function is used to exchange algorithm specific data with the codec<br>
	 * instance. This can be used to implement features specific to a particular<br>
	 * algorithm.<br>
	 * * This wrapper function dispatches the request to the helper function<br>
	 * associated with the given ctrl_id. It tries to call this function<br>
	 * transparently, but will return #VPX_CODEC_ERROR if the request could not<br>
	 * be dispatched.<br>
	 * * Note that this function should not be used directly. Call the<br>
	 * #vpx_codec_control wrapper macro instead.<br>
	 * * \param[in]     ctx              Pointer to this instance's context<br>
	 * \param[in]     ctrl_id          Algorithm specific control identifier<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     The control request was processed.<br>
	 * \retval #VPX_CODEC_ERROR<br>
	 *     The control request was not processed.<br>
	 * \retval #VPX_CODEC_INVALID_PARAM<br>
	 *     The data was not valid.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_control_(vpx_codec_ctx_t*, int, null)</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:371</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_control_(Pointer<vpx_codec_ctx_t > ctx, int ctrl_id, Object... varargs) {
		return FlagSet.fromValue(vpx_codec_control_(Pointer.getPeer(ctx), ctrl_id), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_control_(@Ptr long ctx, int ctrl_id, Object... varargs);
	/**
	 * \brief Iterate over the list of segments to allocate.<br>
	 * * Iterates over a list of the segments to allocate. The iterator storage<br>
	 * should be initialized to NULL to start the iteration. Iteration is complete<br>
	 * when this function returns VPX_CODEC_LIST_END. The amount of memory needed to<br>
	 * allocate is dependent upon the size of the encoded stream. In cases where the<br>
	 * stream is not available at allocation time, a fixed size must be requested.<br>
	 * The codec will not be able to operate on streams larger than the size used at<br>
	 * allocation time.<br>
	 * * \param[in]      ctx     Pointer to this instance's context.<br>
	 * \param[out]     mmap    Pointer to the memory map entry to populate.<br>
	 * \param[in,out]  iter    Iterator storage, initialized to NULL<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     The memory map entry was populated.<br>
	 * \retval #VPX_CODEC_ERROR<br>
	 *     Codec does not support XMA mode.<br>
	 * \retval #VPX_CODEC_MEM_ERROR<br>
	 *     Unable to determine segment size from stream info.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_get_mem_map(vpx_codec_ctx_t*, vpx_codec_mmap_t*, vpx_codec_iter_t*)</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:515</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_get_mem_map(Pointer<vpx_codec_ctx_t > ctx, Pointer<vpx_codec_mmap_t > mmap, Pointer<Pointer<? > > iter) {
		return FlagSet.fromValue(vpx_codec_get_mem_map(Pointer.getPeer(ctx), Pointer.getPeer(mmap), Pointer.getPeer(iter)), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_get_mem_map(@Ptr long ctx, @Ptr long mmap, @Ptr long iter);
	/**
	 * \brief Identify allocated segments to codec instance<br>
	 * * Stores a list of allocated segments in the codec. Segments \ref MUST be<br>
	 * passed in the order they are read from vpx_codec_get_mem_map(), but may be<br>
	 * passed in groups of any size. Segments \ref MUST be set only once. The<br>
	 * allocation function \ref MUST ensure that the vpx_codec_mmap_t::base member<br>
	 * is non-NULL. If the segment requires cleanup handling (e.g., calling free()<br>
	 * or close()) then the vpx_codec_mmap_t::dtor member \ref MUST be populated.<br>
	 * * \param[in]      ctx     Pointer to this instance's context.<br>
	 * \param[in]      mmaps   Pointer to the first memory map entry in the list.<br>
	 * \param[in]      num_maps  Number of entries being set at this time<br>
	 * * \retval #VPX_CODEC_OK<br>
	 *     The segment was stored in the codec context.<br>
	 * \retval #VPX_CODEC_INCAPABLE<br>
	 *     Codec does not support XMA mode.<br>
	 * \retval #VPX_CODEC_MEM_ERROR<br>
	 *     Segment base address was not set, or segment was already stored.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_set_mem_map(vpx_codec_ctx_t*, vpx_codec_mmap_t*, unsigned int)</code><br>
	 * <i>native declaration : vpx\vpx_codec.h:541</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_set_mem_map(Pointer<vpx_codec_ctx_t > ctx, Pointer<vpx_codec_mmap_t > mmaps, int num_maps) {
		return FlagSet.fromValue(vpx_codec_set_mem_map(Pointer.getPeer(ctx), Pointer.getPeer(mmaps), num_maps), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_set_mem_map(@Ptr long ctx, @Ptr long mmaps, int num_maps);
	/**
	 * \brief Initialize an encoder instance<br>
	 * * Initializes a encoder context using the given interface. Applications<br>
	 * should call the vpx_codec_enc_init convenience macro instead of this<br>
	 * function directly, to ensure that the ABI version number parameter<br>
	 * is properly initialized.<br>
	 * * If the library was configured with --disable-multithread, this call<br>
	 * is not thread safe and should be guarded with a lock if being used<br>
	 * in a multithreaded context.<br>
	 * * In XMA mode (activated by setting VPX_CODEC_USE_XMA in the flags<br>
	 * parameter), the storage pointed to by the cfg parameter must be<br>
	 * kept readable and stable until all memory maps have been set.<br>
	 * * \param[in]    ctx     Pointer to this instance's context.<br>
	 * \param[in]    iface   Pointer to the algorithm interface to use.<br>
	 * \param[in]    cfg     Configuration to use, if known. May be NULL.<br>
	 * \param[in]    flags   Bitfield of VPX_CODEC_USE_* flags<br>
	 * \param[in]    ver     ABI version number. Must be set to<br>
	 *                       VPX_ENCODER_ABI_VERSION<br>
	 * \retval #VPX_CODEC_OK<br>
	 *     The decoder algorithm initialized.<br>
	 * \retval #VPX_CODEC_MEM_ERROR<br>
	 *     Memory allocation failed.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_enc_init_ver(vpx_codec_ctx_t*, vpx_codec_iface_t*, vpx_codec_enc_cfg_t*, vpx_codec_flags_t, int)</code><br>
	 * <i>native declaration : vpx\vpx_encoder.h:663</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_enc_init_ver(Pointer<vpx_codec_ctx_t > ctx, Pointer<VpxLibrary.vpx_codec_iface > iface, Pointer<vpx_codec_enc_cfg_t > cfg, @CLong long flags, int ver) {
		return FlagSet.fromValue(vpx_codec_enc_init_ver(Pointer.getPeer(ctx), Pointer.getPeer(iface), Pointer.getPeer(cfg), flags, ver), VpxLibrary.vpx_codec_err_t.class);
	}
	synchronized protected native static int vpx_codec_enc_init_ver(@Ptr long ctx, @Ptr long iface, @Ptr long cfg, @CLong long flags, int ver);
	/**
	 * \brief Initialize multi-encoder instance<br>
	 * * Initializes multi-encoder context using the given interface.<br>
	 * Applications should call the vpx_codec_enc_init_multi convenience macro<br>
	 * instead of this function directly, to ensure that the ABI version number<br>
	 * parameter is properly initialized.<br>
	 * * In XMA mode (activated by setting VPX_CODEC_USE_XMA in the flags<br>
	 * parameter), the storage pointed to by the cfg parameter must be<br>
	 * kept readable and stable until all memory maps have been set.<br>
	 * * \param[in]    ctx     Pointer to this instance's context.<br>
	 * \param[in]    iface   Pointer to the algorithm interface to use.<br>
	 * \param[in]    cfg     Configuration to use, if known. May be NULL.<br>
	 * \param[in]    num_enc Total number of encoders.<br>
	 * \param[in]    flags   Bitfield of VPX_CODEC_USE_* flags<br>
	 * \param[in]    dsf     Pointer to down-sampling factors.<br>
	 * \param[in]    ver     ABI version number. Must be set to<br>
	 *                       VPX_ENCODER_ABI_VERSION<br>
	 * \retval #VPX_CODEC_OK<br>
	 *     The decoder algorithm initialized.<br>
	 * \retval #VPX_CODEC_MEM_ERROR<br>
	 *     Memory allocation failed.<br>
	 * Original signature : <code>vpx_codec_err_t vpx_codec_enc_init_multi_ver(vpx_codec_ctx_t*, vpx_codec_iface_t*, vpx_codec_enc_cfg_t*, int, vpx_codec_flags_t, vpx_rational_t*, int)</code><br>
	 * <i>native declaration : vpx\vpx_encoder.h:702</i>
	 */
	synchronized public static IntValuedEnum<VpxLibrary.vpx_codec_err_t > vpx_codec_enc_init_multi_ver(Pointer<vpx_codec_ctx_t > ctx, Pointer<VpxLibrary.vpx_codec_iface > iface, Pointer<vpx_codec_enc_cfg_t > cfg, int num_enc, @CLong long flags, Pointer<vpx_rational_t > dsf, int ver) {
		return FlagSet.fromValue(vpx_codec_enc_init_multi_ver(Pointer.getPeer(ctx), Pointer.getPeer(iface), Pointer.getPeer(cfg), num_enc, flags, Pointer.getPeer(dsf), ver), VpxLibrary.vpx_codec_err_t.class);
	}
